add media query for mobile width

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         </div>
     </div>
 
-    <div class = "row" id = "contact-row-index"> 
+    <div class = "row contact-row" id = "contact-row-index"> 
         <a href = "https://www.linkedin.com/in/minorifh/" target = "_blank"><img src = "assets/images/contact-icons/linkedinIcon.png" id = "li-icon" width = "40px" opacity = "0.8"></a>
         <a href = "https://github.com/minori-fh" target = "_blank"><img src = "assets/images/contact-icons/githubIcon.png" id = "gh-icon" width = "40px" opacity = "0.8"></a>
-        <img src = "assets/images/contact-icons/mailIcon.png" class = "mail-icon" width = "40px" height = "37px" opacity = "0.8"> 
+        <a href = "#"><img src = "assets/images/contact-icons/mailIcon.png" class = "mail-icon" width = "37px" height = "37px" opacity = "0.8"> </a>
     </div>
     <div class = "row" id = "chat1">
         Let's chat! E-mail: minori.fh@gmail.com
