add media queries for mobile interfaces for work and about me page

--- a/about-me.html
+++ b/about-me.html
@@ -55,9 +55,9 @@
                 <div class = "row" id = "chat3">
                     Let's chat! E-mail: minori.fh@gmail.com
                 </div>
-            </div>
+        </div>
     
-        <div class = "column right">
+        <div class = "column right right1">
           
                 <div class = "main-text-row" id = "self-description1">
                     Hi, my name is <span id = "description-name">Minori</span>. <br>
@@ -82,7 +82,7 @@
 
 <section id = "about-me2">
     <div class = "row">
-        <div class = "column right">
+        <div class = "column right right2">
             <div class = "main-text-row" id = "self-description2">
                     Currently: <img src = "assets/images/mapMarker.png" id = "current" width = "28px">San Francisco <br>
                     Future: <img src = "assets/images/pending.png" id = "future" width = "35px" style= "vertical-align:middle">pending <br>
