--- a/work.html
+++ b/work.html
@@ -59,7 +59,7 @@
             </div>
     </div>
 
-    <div class = "column right">
+    <div class = "column right right1">
         <div class = "row" id = "stack-label-row">
             <div class = "column">
                 FRONT-END
@@ -177,7 +177,7 @@
 
 <section id = "work2">
     <div class = "row">
-        <div class = "column right">
+        <div class = "column right right2">
             <div class = "row" id = "work-label-row">
                 <div class = "column">
                     SELECTED PROJECTS
