create media query for index page to edit display of cubes

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                 <p id = "scroll-arrow2">← scroll</p>
             </div>
         </div>
+
+        <div id = "cube-replace">
+            <p> &lt <span id = "aboutme-replace" class = "underline-magical">ABOUT ME</span> /&gt</p><br><br>
+            <p> &lt <span id = "work-replace" class = "underline-magical">WORK</span> /&gt</p>
+        </div>
     </div>
 
     <div class = "row contact-row" id = "contact-row-index"> 
