edit row class on scroll row 2

--- a/work.html
+++ b/work.html
@@ -167,7 +167,7 @@
             <div class = "row scroll-row-label">
                 <p>projects</p>
             </div>
-            <div class = "row" id = "scroll-row2">
+            <div id = "scroll-row2">
                 <img src = "assets/images/scrolldown.png" id = "scroll-down2" width = "50px">
             </div>
         </div>
