edit self description on about me page

--- a/about-me.html
+++ b/about-me.html
@@ -96,8 +96,8 @@
                     My professional experiences range from working in the food industry to working for a top consulting firm. My most current role as an analytics consultant in the tech industry finally gave me the courage to dive into the deep end 
                     what I truly want to do, to *CREATE*! <br><br>
 
-                    Current position: student at UC Berkeley Extensions - Full-stack Developer program, 
-                    where I've been putting in a lot of hours coding and drinking cups of coffee...
+                    Current fueling my curiosity by participating in UC Berkeley Extensions - Full-stack Developer program 
+                    where I've been putting in a lot of hours learning new coding languages and drinking cups of coffee...
             </div>
             <div class = "row" id = "self-description4">
                 <div class = "column" id = "coding-icon">
