--- a/work.html
+++ b/work.html
@@ -196,12 +196,12 @@
                 </div>
 
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/images/project-pictures/expressflix.png" alt="Card image cap">
+                    <img class="card-img-top" src="assets/images/project-pictures/sip.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">EXPRESSFLIX</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href = "https://minori-fh.github.io/giftastic/" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
-                        <a href = "https://github.com/minori-fh/giftastic" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
+                        <h5 class="card-title">SIP</h5>
+                        <p class="card-text">Ever been overwhelmed with the amount of choices when choosing a place to grab a drink with your friends? An application using Google Maps and Yelp API to help users battle 'paralysis by analysis'.</p>
+                        <a href = "https://minori-fh.github.io/Sip/" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
+                        <a href = "https://github.com/minori-fh/Sip" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
                     </div>
                 </div>
 
