--- a/work.html
+++ b/work.html
@@ -177,7 +177,7 @@
 
 <section id = "work2">
     <div class = "row">
-        <div class = "column right right2">
+        <div class = "column right right2" id="right-work">
             <div class = "row" id = "work-label-row">
                 <div class = "column">
                     SELECTED PROJECTS
@@ -186,32 +186,43 @@
     
             <div class = "row" id = "projects-row1">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/images/project-pictures/hangman.png" alt="Card image cap">
+                    <img class="card-img-top" src="assets/images/project-pictures/AdoptAFriend.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">HANGMAN</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title"><b>ADOPT A FRIEND</b></h5>
+                        <p>Looking to adopt your new best friend? A full stack application that uses <span class="underline-magical">cheerio</span> (node package) to scrape through three dog adoptions agencies in SF. <span class="underline-magical">MongoDB</span> was used for modeling and to allow users to leave comments on his or her favorite doggos!</p>
+                        <!-- need to update site link -->
                         <a href = "https://minori-fh.github.io/Word-Guess-Game/" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
-                        <a href = "https://github.com/minori-fh/Word-Guess-Game" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
+                        <a href = "https://github.com/minori-fh/AdoptAFriend" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
                     </div>
                 </div>
 
                 <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="assets/images/project-pictures/sip.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">SIP</h5>
-                        <p class="card-text">Ever been overwhelmed with the amount of choices when choosing a place to grab a drink with your friends? An application using Google Maps and Yelp API to help users battle 'paralysis by analysis'.</p>
+                        <h5 class="card-title"><b>SIP</b></h5>
+                        <p class="card-text">Ever been overwhelmed with the amount of choices when choosing a place to grab a drink with your friends? An application using <span class="underline-magical">Google Maps and Yelp APIs</span> to help users battle 'paralysis by analysis'.</p>
                         <a href = "https://minori-fh.github.io/Sip/" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
                         <a href = "https://github.com/minori-fh/Sip" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
                     </div>
                 </div>
 
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/images/project-pictures/polytopia.png" alt="Card image cap">
+                    <img class="card-img-top" src="assets/images/project-pictures/bark.png" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">POLYTOPIA</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href = "https://minori-fh.github.io/unit-4-game/" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
-                        <a href = "https://github.com/minori-fh/unit-4-game" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
+                        <h5 class="card-title">BARK</h5>
+                        <p class="card-text">A full stack social media application for individuals to share their thoughts or follow their favorite influencers! <span class="underline-magical">Passport</span> (node package) was used for authentication and <span class="underline-magical">Sequelize</span> for modeling. The weather widget grabs the location of the user and will only display relevant posts depending on the user's location!</p>
+                        <a href = "https://barkbark.herokuapp.com/" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
+                        <a href = "https://github.com/minori-fh/Bark" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
+                    </div>
+                </div>
+
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="assets/images/project-pictures/2DO.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">2DO</h5>
+                        <p class="card-text">A full stack application to help individuals stay on track! <span class='underline-magical'>MySQL</span> was used to allow users to create, update, and delete his or her 2DO tasks. <span class="underline-magical">MVC</span> framework was used for the purpose of easy maintenance and scalability as well as <span class='underline-magical'>handlebars</span> for the template engine.</p>
+                        <a href = "https://tasks-2do.herokuapp.com/" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
+                        <a href = "https://github.com/minori-fh/2DO" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
                     </div>
                 </div>
             </div>
