edit project captions

--- a/work.html
+++ b/work.html
@@ -189,7 +189,7 @@
                     <img class="card-img-top" src="assets/images/project-pictures/AdoptAFriend.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title"><b>ADOPT A FRIEND</b></h5>
-                        <p>Looking to adopt your new best friend? A full stack application that uses <span class="underline-magical">cheerio</span> (node package) to scrape through three dog adoptions agencies in SF. <span class="underline-magical">MongoDB</span> was used for modeling and to allow users to leave comments on his or her favorite doggos!</p>
+                        <p>Looking to adopt your new best friend? A full stack application that uses <span class="underline-magical">cheerio</span> (node package) to scrape through three dog adoptions agency sites in SF. <span class="underline-magical">MongoDB</span> was used for modeling and to allow users to leave comments on his or her favorite doggos!</p>
                         <!-- need to update site link -->
                         <a href = "https://minori-fh.github.io/Word-Guess-Game/" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
                         <a href = "https://github.com/minori-fh/AdoptAFriend" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
