--- a/work.html
+++ b/work.html
@@ -106,6 +106,14 @@
                         jQuery
                     </div>
                 </div>
+                <div class = "row tech-row">
+                    <div class = "column">
+                        <img src = "assets/images/stack/react.svg" class = "tech-icon" width = "40px">
+                    </div>
+                    <div class = "column tech-label-col">
+                        React
+                    </div>
+                </div>
             </div>
 
             <div class = "column" id = "back-end-col">
@@ -123,6 +131,38 @@
                     </div>
                     <div class = "column tech-label-col">
                         MySQL
+                    </div>
+                </div>
+                <div class = "row tech-row">
+                    <div class = "column">
+                        <img src = "assets/images/stack/sequelize.svg" class = "tech-icon" width = "40px">
+                    </div>
+                    <div class = "column tech-label-col">
+                        Sequelize
+                    </div>
+                </div>
+                <div class = "row tech-row">
+                    <div class = "column">
+                        <img src = "assets/images/stack/MongoDB.png" class = "tech-icon" width = "40px">
+                    </div>
+                    <div class = "column tech-label-col">
+                        MongoDB
+                    </div>
+                </div>
+                <div class = "row tech-row">
+                    <div class = "column">
+                        <img src = "assets/images/stack/express.svg" class = "tech-icon" width = "40px">
+                    </div>
+                    <div class = "column tech-label-col">
+                        Express
+                    </div>
+                </div>
+                <div class = "row tech-row">
+                    <div class = "column">
+                        <img src = "assets/images/stack/passport.png" class = "tech-icon" width = "40px">
+                    </div>
+                    <div class = "column tech-label-col">
+                        Passport
                     </div>
                 </div>
             </div>
@@ -197,6 +237,16 @@
                 </div>
 
                 <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="assets/images/project-pictures/jumble.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>JUMBLE</b></h5>
+                        <p class="card-text">A project management application to help small business owners stay on track. Full stack <span class="underline-magical">SERN</span> (Sequelize, Express, React, Node) application utilizing <span class="underline-magical">Chart.js</span> to transform user input into useful visual representations.</p>
+                        <a href = "https://github.com/minori-fh/jumble-dash" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
+                        <a href = "https://jumble-dash.herokuapp.com/" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
+                    </div>
+                </div>
+                
+                <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="assets/images/project-pictures/sip.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title"><b>SIP</b></h5>
@@ -213,16 +263,6 @@
                         <p class="card-text">A full stack social media application for individuals to share their thoughts or follow their favorite influencers! <span class="underline-magical">Passport</span> (node package) was used for authentication and <span class="underline-magical">Sequelize</span> for modeling. The weather widget grabs the location of the user and will only display relevant posts depending on the user's location!</p>
                         <a href = "https://barkbark.herokuapp.com/" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
                         <a href = "https://github.com/minori-fh/Bark" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
-                    </div>
-                </div>
-
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/images/project-pictures/2DO.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">2DO</h5>
-                        <p class="card-text">A full stack application to help individuals stay on track! <span class='underline-magical'>MySQL</span> was used to allow users to create, update, and delete his or her 2DO tasks. <span class="underline-magical">MVC</span> framework was used for the purpose of easy maintenance and scalability as well as <span class='underline-magical'>handlebars</span> for the template engine.</p>
-                        <a href = "https://tasks-2do.herokuapp.com/" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
-                        <a href = "https://github.com/minori-fh/2DO" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
                     </div>
                 </div>
             </div>
