add scroll p in home page and box shadow for project cards

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class = "row" id = "cubes-row">
         <div class = "row" id = "cubez">
             <div class = "column cube" id = "cube-0" cube-value = "0">
-                <p id = "scroll-arrow1">scroll →</p>
+                <p id = "scroll-arrow1"> →</p>
             </div>
             <div class = "column cube" id = "cube-1" cube-value = "1">
                 <p id = "about-me-link"><strong>ABOUT ME</strong></p>
@@ -44,7 +44,7 @@
                 <img id = "background-image2" src = "assets/images/cube-gifs/rainbow.gif">
             </div>
             <div class = "column cube" id = "cube-3" cube-value = "3">
-                <p id = "scroll-arrow2">← scroll</p>
+                <p id = "scroll-arrow2">← </p>
             </div>
         </div>
 
@@ -52,6 +52,10 @@
             <p> &lt <span id = "aboutme-replace" class = "underline-magical">ABOUT ME</span> /&gt</p><br><br>
             <p> &lt <span id = "work-replace" class = "underline-magical">WORK</span> /&gt</p>
         </div>
+    </div>
+
+    <div class = 'row' id = 'scroll-arrow-row'>
+        <p id = "scroll-arrow">scroll ↑</p>
     </div>
 
     <div class = "row contact-row" id = "contact-row-index"> 
