add favicon for portfolio

--- a/about-me.html
+++ b/about-me.html
@@ -14,6 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Link to Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Cookie|Josefin+Sans|Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
 </head>
 <body>
 
