--- a/work.html
+++ b/work.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Roboto+Slab&display=swap" rel="stylesheet">
     <!-- Link to Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
     
 </head>
 <body>
@@ -256,15 +257,6 @@
                     </div>
                 </div>
 
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/images/project-pictures/bark.png" alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">BARK</h5>
-                        <p class="card-text">A full stack social media application for individuals to share their thoughts or follow their favorite influencers! <span class="underline-magical">Passport</span> (node package) was used for authentication and <span class="underline-magical">Sequelize</span> for modeling. The weather widget grabs the location of the user and will only display relevant posts depending on the user's location!</p>
-                        <a href = "https://barkbark.herokuapp.com/" target = "_blank"><img src = "assets/images/stack/link.png" width = "20px"></a>
-                        <a href = "https://github.com/minori-fh/Bark" target = "_blank"><img src = "assets/images/stack/github.png" width = "30px"></a>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
