change scroll to hover on home page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class = 'row' id = 'scroll-arrow-row'>
-        <p id = "scroll-arrow">scroll ↑</p>
+        <p id = "scroll-arrow">hover ↑</p>
     </div>
 
     <div class = "row contact-row" id = "contact-row-index"> 
